<resources>
    <string name="prompt_usercode">ユーザコード</string>
    <string name="prompt_groupid">グループID</string>
    <string name="prompt_latitude">緯度</string>
    <string name="prompt_longitude">経度</string>
    <string name="dialog_confirm">確認</string>
    <string name="stamp">打刻</string>
    <string name="stamp_with_locate">打刻(現在位置)</string>
    <string name="save">保存</string>
    <string name="finish">終了</string>
    <string name="setting">設定</string>
    <string name="location">位置情報</string>
    <string name="operation">操作</string>
    <string name="history">履歴</string>
    <string name="resident">常駐</string>
    <string name="resident_onoff">常駐/解除</string>
    <string name="loading">Loading...</string>
    <string name="msg_success_stamp">打刻しました。</string>
    <string name="msg_save_setting">保存しました。</string>
    <string name="error_field_required">必須項目です。</string>
    <string name="error_validate_setting">値が不正です。</string>
    <string name="error_required_permission_auth">必要なパーミッションが許可されませんでした。</string>
    <string name="error_failed_access_to_jobcan">ジョブカンWebへのアクセスに失敗しました。</string>
    <string name="error_failed_get_now_location">現在位置の取得に失敗しました。</string>
    <string name="error_required_location_accuracy">位置精度設定が許可されませんでした。</string>
    <string name="warn_no_location">位置情報が取得できませんでした。</string>
    <string name="error_invalid_location">位置情報が不正です。</string>
    <string name="alerm">アラーム</string>

    <string name="section_format">Hello World from section: %1$d</string>
</resources>
