<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/border"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/operation"/>

            <Button
                android:id="@+id/btnStamp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/stamp"/>

            <Button
                android:id="@+id/btnStampWithLocate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/stamp_with_locate"/>

            <Button
                android:id="@+id/btnResident"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/resident_onoff"/>
        </LinearLayout>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>