<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/border"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/txtUserCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_usercode"
                    android:maxLines="1"
                    android:singleLine="true"
                    tools:ignore="Deprecated"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/txtGroupId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_groupid"
                    android:inputType="number"
                    android:maxLines="1"
                    android:singleLine="true"
                    tools:ignore="Deprecated"/>
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btnSaveSetting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/save"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/border"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                              android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                              android:layout_toLeftOf="@id/btnLocation"
                              android:layout_toStartOf="@+id/btnLocation"
                              android:baselineAligned="false"
                              android:orientation="horizontal"
                              android:weightSum="1">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5">

                        <EditText
                            android:id="@+id/txtLatitude"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/prompt_latitude"
                            android:inputType="numberDecimal"
                            android:maxLines="1"
                            android:singleLine="true"
                            tools:ignore="Deprecated"/>

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5">

                        <EditText
                            android:id="@+id/txtLongitude"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/prompt_longitude"
                            android:inputType="numberDecimal"
                            android:maxLines="1"
                            android:singleLine="true"
                            tools:ignore="Deprecated"/>

                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>

                <ImageButton
                    android:id="@+id/btnLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:contentDescription="@string/location"
                    app:srcCompat="@android:drawable/ic_menu_mylocation"/>
            </RelativeLayout>

            <jp.co.getti.lab.android.jobcaaan.view.AutoResizeTextView
                android:id="@+id/txtAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/btnSaveLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/save"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/border"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alerm"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/btnAlerm1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/alerm"
                    app:srcCompat="@android:drawable/ic_menu_recent_history"/>

                <ImageButton
                    android:id="@+id/btnAlerm1Clear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:contentDescription="@string/location"
                    app:srcCompat="@android:drawable/ic_delete"/>

                <jp.co.getti.lab.android.jobcaaan.view.AutoResizeTextView
                    android:id="@+id/txtAlerm1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/btnAlerm1"
                    android:layout_toLeftOf="@id/btnAlerm1Clear"
                    android:layout_toRightOf="@id/btnAlerm1"
                    android:layout_toStartOf="@id/btnAlerm1Clear"
                    android:textSize="36sp"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/btnAlerm2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/alerm"
                    app:srcCompat="@android:drawable/ic_menu_recent_history"/>

                <ImageButton
                    android:id="@+id/btnAlerm2Clear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:contentDescription="@string/location"
                    app:srcCompat="@android:drawable/ic_delete"/>

                <jp.co.getti.lab.android.jobcaaan.view.AutoResizeTextView
                    android:id="@+id/txtAlerm2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/btnAlerm2"
                    android:layout_toLeftOf="@id/btnAlerm2Clear"
                    android:layout_toRightOf="@id/btnAlerm2"
                    android:layout_toStartOf="@id/btnAlerm2Clear"
                    android:textSize="36sp"/>

            </RelativeLayout>

            <Button
                android:id="@+id/btnSaveAlerm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/save"/>
        </LinearLayout>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
